@@ -1,3 +1,8 @@
+Fri Aug 28 21:03:26 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/cavernlog.cc: Show "busy" mouse cursor while processing survey
+	  data.
+
 Fri Aug 28 19:09:44 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/cavernlog.cc,src/cavernlog.h,src/mainfrm.cc: Use idle events
